# Pocket-Dedicated-Server

./: .gitignore  .ninja_deps  CMakeLists.txt  README.md
eglut/: eglut.c
hybrisold/src/: hooks.c
mcpe/: App.h  AppPlatform.h  GuiData.h  MinecraftGame.cpp  MinecraftGame.h  Multitouch.h  Options.h  ScreenChooser.h  gl.h  types.cpp
pluginLoader/: PluginEventing.cpp  PluginEventing.h  PluginInterface.h  PluginLoader.cpp  PluginLoader.h
pluginLoader/dataWrapper/item/: Item.cpp  Item.h
pluginLoader/dataWrapper/level/: BlockPos.cpp  BlockPos.h
pluginLoader/dataWrapper/player/: Player.cpp  Player.h
pluginLoader/events/: EventObject.cpp  EventObject.h
pluginLoader/events/item/: UseItemEvent.h
server/: MinecraftObjectLayer.cpp  MinecraftObjectLayer.h  statics.cpp  statics.h
server/block/: Block.cpp  Block.h  BlockID.h
server/commands/: Command.cpp  Command.h  CommandOrigin.cpp  CommandOrigin.h  CommandOriginData.cpp  CommandOriginData.h  CommandPropertyBag.cpp  CommandPropertyBag.h  CommandType.cpp  CommandType.h  MinecraftCommands.cpp  MinecraftCommands.h  PlayerCommandOrigin.cpp  PlayerCommandOrigin.h  PropertyBag.cpp  PropertyBag.h  ServerCommands.cpp  ServerCommands.h
server/components/angryComponent/: AngryComponent.cpp  AngryComponent.h
server/components/explodeComponent/: ExplodeComponent.cpp  ExplodeComponent.h
server/entity/: Entity.cpp  Entity.h  SynchedEntityData.cpp  SynchedEntityData.h
server/entity/animal/: Animal.cpp  Animal.h
server/entity/blockEntity/: BlockEntity.cpp  BlockEntity.h
server/entity/classes/: Arrow.cpp  Arrow.h  PrimedTnt.cpp  PrimedTnt.h  Wolf.cpp  Wolf.h
server/entity/damageSource/: EntityDamageByChildEntitySource.cpp  EntityDamageByChildEntitySource.h  EntityDamageByEntitySource.cpp  EntityDamageByEntitySource.h  EntityDamageSource.cpp  EntityDamageSource.h
server/entity/itemEntity/: ItemEntity.cpp  ItemEntity.h
server/entity/mob/: Mob.cpp  Mob.h  MobEffectInstance.cpp  MobEffectInstance.h
server/entity/monster/: Monster.cpp  Monster.h
server/entity/teleportComponent/: TeleportComponent.cpp  TeleportComponent.h
server/eventing/: MinecraftEventing.cpp  MinecraftEventing.h
server/gameMode/: GameMode.cpp  GameMode.h  SurvivalMode.cpp  SurvivalMode.h
server/item/: FlintAndSteelItem.h  Item.cpp  Item.h  ItemInstance.cpp  ItemInstance.h
server/item/blockItem/: BlockItem.cpp  BlockItem.h
server/level/: BlockPos.cpp  BlockPos.h  BlockSource.cpp  BlockSource.h  BlockSourceListener.cpp  BlockSourceListener.h  Dimension.cpp  Dimension.h  Level.cpp  Level.h  LevelListener.cpp  LevelListener.h  SavedData.cpp  SavedData.h  UnknownPacketSender.cpp  UnknownPacketSender.h
server/level/chunk/: ChunkPos.cpp  ChunkPos.h  ChunkSource.cpp  ChunkSource.h  ChunkViewSource.cpp  ChunkViewSource.h  LevelChunk.cpp  LevelChunk.h  MainChunkSource.cpp  MainChunkSource.h  PlayerChunkSource.cpp  PlayerChunkSource.h
server/level/explodeComponent/: ExplodeComponent.cpp  ExplodeComponent.h
server/material/: Material.cpp  Material.h
server/math/aabb/: AABB.cpp  AABB.h
server/math/vec2/: Vec2.cpp  Vec2.h
server/math/vec3/: Vec3.cpp  Vec3.h
server/network/: NetworkIdentifier.cpp  NetworkIdentifier.h  ServerLocator.cpp  ServerLocator.h  ServerNetworkHandler.cpp  ServerNetworkHandler.h
server/network/connectionRequest/: ConnectionRequest.cpp  ConnectionRequest.h
server/network/networkHandler/: Connection.cpp  Connection.h  NetworkHandler.cpp  NetworkHandler.h  RakNetInstance.cpp  RakNetInstance.h  RakPeer.cpp  RakPeer.h
server/network/networkPeer/: BatchedNetworkPeer.cpp  BatchedNetworkPeer.h  CompressedNetworkPeer.cpp  CompressedNetworkPeer.h  NetworkPeer.cpp  (+3 more)
server/player/: Player.cpp  Player.h  ServerPlayer.cpp  ServerPlayer.h
server/raknet/: RakNetServerLocator.cpp  RakNetServerLocator.h
server/util/: util.cpp  util.h
server/whitelist/: Whitelist.cpp  Whitelist.h
serverGamemode/AntiCheat/: Item.cpp  Item.h
serverGamemode/bans/: Bans.cpp  Bans.h
serverGamemode/clearLag/: ClearLag.cpp  ClearLag.h
serverGamemode/customCommands/: CustomCommands.cpp  CustomCommands.h
serverGamemode/customPermissions/: CustomPermissions.cpp  CustomPermissions.h
serverGamemode/enderChestBonus/: EnderChestBonus.cpp  EnderChestBonus.h
serverGamemode/freeBoat/: FreeBoat.cpp  FreeBoat.h
serverGamemode/hotBar/: HotBar.cpp  HotBar.h
serverGamemode/loginChecks/: LoginChecks.cpp  LoginChecks.h
serverGamemode/petHelper/: PetHelper.h  Wolf.cpp
serverGamemode/regionGuard/: Region.cpp  Region.h  RegionGuard.cpp  RegionGuard.h
serverGamemode/spawnColors/: SpawnColors.cpp  SpawnColors.h
serverGamemode/tpa/: Tpa.cpp  Tpa.h
serverRunner/: Loader.cpp  Loader.h  ServerInstance.cpp  ServerInstance.h
serverRunner/appPlatform/: AppPlatform.h  LinuxAppPlatform.cpp  LinuxAppPlatform.h
serverRunner/automation/: Automation.h
serverRunner/config/: Config.cpp  Config.h
serverRunner/entitlement/: EntitlementManager.cpp  EntitlementManager.h
serverRunner/filePathManager/: FilePathManager.cpp  FilePathManager.h
serverRunner/level/: LevelSettings.cpp  LevelSettings.h
serverRunner/lists/: OriginalOpsList.h  OriginalWhiteList.h
serverRunner/minecraftGame/: DedicatedMinecraftApp.cpp  DedicatedMinecraftApp.h  IMinecraftApp.h  Minecraft.cpp  Minecraft.h
serverRunner/resourcePack/: PackManifestFactory.cpp  PackManifestFactory.h  ResourcePack.cpp  ResourcePack.h  ResourcePackManager.cpp  ResourcePackManager.h  ResourcePackRepository.cpp  ResourcePackRepository.h  ResourcePackStack.cpp  ResourcePackStack.h
serverRunner/scheduler/: Scheduler.cpp  Scheduler.h
serverRunner/userManager/: UserManager.cpp  UserManager.h
serverRunner/uuid/: UUID.h
src/: .cpp  Automation.h  BotInstance.cpp  BotInstance.h  DedicatedServerMinecraftApp.h  Fabric.h  KeyManager.h  LevelSettings.h  LinuxAppPlatform.cpp  LinuxAppPlatform.h  LinuxStore.h  MoveInputHandler.h  Network.h  ServerInstance.h  UserAuthentication.h  api.h  common.cpp  common.h  d.cpp  gles_symbols.h  hook.cpp  libm_symbols.h  log.h  login.h  lolcat.cc  main.cpp  types.cpp  uuidv4.h
(+89 files in other folders)
